--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-use-gesture": "^7.0.13"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
