--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "engines":{
     "node" : "10.16.x",
-    "npm" : "6.9.x",
+    "npm" : "6.9.x"
   },
   "scripts": {
     "start": "serve -s build",
